<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#272727"
    android:orientation="vertical"
    tools:context=".activities.WelcomeActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/jack"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_above="@id/appTitle"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/mahila_safety_logo_enhanced" />

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/card1"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="cursive"
        android:text="@string/app_name"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="20dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:padding="15dp">

            <TextView
                android:id="@+id/instruction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/instructionTitle"
                android:layout_centerVertical="true"
                android:fontFamily="sans-serif"
                android:lineSpacingExtra="5dp"
                android:padding="10dp"
                android:text="@string/instructions"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/instructionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:lineSpacingExtra="5dp"
                android:padding="10dp"
                android:text="@string/instruction"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="25sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_button_bg"
        android:elevation="5dp"
        android:fontFamily="sans-serif"
        android:padding="10dp"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="#FBC9AF"
        android:textSize="18sp" />
</RelativeLayout>
